add scritpts and mobile heading for singin page

--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -28,6 +28,10 @@
     textarea:hover~&,
     textarea:focus~& {
       color: $color-basic;
+
+      .is-error & {
+        color: $color-error;
+      }
     }
 
     #{$b}.is-top &,
@@ -45,6 +49,10 @@
 
         line-height: (26/14);
       }
+
+      .is-error & {
+        color: $color-error;
+      }
     }
 
     textarea~& {
@@ -54,6 +62,10 @@
 
     #{$b}.is-top textarea~& {
       transform: translate3d(0, -24px, 0);
+    }
+
+    .is-error & {
+      color: $color-error;
     }
   }
 
