--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -45,6 +45,10 @@
       color: $color-placeholder;
     }
   }
+
+  .is-error & {
+    border-bottom-color: $color-error;
+  }
 }
 
 .inputbox {
@@ -215,6 +219,10 @@
 
         line-height: 1.2;
         padding-bottom: 12px;
+      }
+
+      .is-error & {
+        border-bottom-color: $color-error;
       }
     }
 
