--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -82,6 +82,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-top: -60px;
   }
 
+  &_content {
+    margin-top: -58px;
+
+    @include screen('sm') {
+      margin-top: -24px;
+    }
+  }
+
   &_no-top:not(.grid_inner) {
     margin-top: 0;
   }
@@ -181,6 +189,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_reserv & {
       padding-top: 60px;
+    }
+
+    #{$b}_content & {
+      padding-top: 58px;
+
+      @include screen('sm') {
+        padding-top: 24px;
+      }
     }
 
     #{$b}_int28 & {
