--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -48,6 +48,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text28 {
+  font-size: 28px;
+  line-height: 1;
+  letter-spacing: -.02em;
+}
+
 @mixin text22 {
   font-size: 22px;
   line-height: (26/22);
