--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -112,6 +112,7 @@ $color-footnote-star: #1fcaca;
 $color-note-green: #0acda7;
 $color-mask-bg1: rgba(#172640, .41);
 $color-mask-bg2: rgba(#233435, .39);
+$color-error: #d67354;
 
 // ##########
 // Transitions
