--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -226,6 +226,7 @@
   }
 
   &__wrapper {
+    position: relative;
     display: flex;
     justify-content: flex-start;
     width: 100%;
@@ -437,5 +438,37 @@
     &:not(:last-child) {
       margin-bottom: 44px;
     }
+  }
+}
+
+.error-message {
+  @include text;
+
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: block;
+  opacity: 0;
+  pointer-events: none;
+  line-height: 1.3;
+  color: $color-error;
+  width: 100%;
+  font-weight: 400;
+  transition: opacity $ease-main;
+  z-index: 2;
+  background-color: $color-bg;
+
+  @include screen('sm') {
+    @include text12;
+
+    line-height: 1.3;
+  }
+
+  .form_white & {
+    background-color: $color-white;
+  }
+
+  .is-error & {
+    opacity: 1;
   }
 }
