--- a/app/pages/signup-verification-message/host-signup-verification-message.pug
+++ b/app/pages/signup-verification-message/host-signup-verification-message.pug
@@ -6,10 +6,10 @@ block head
 block content
   +content-origin._reverse._last._top-bmg
     .container
-      +grid.grid_layout.grid_no-top
+      +grid.grid_layout.grid_content
         +col({ xl: 4, lg: 12})
           +sidebar._no-bg
-            +heading('assets/images/heading-bg2.jpg', 'assets/images/heading-bg2.jpg')._mask2
+            +heading('assets/images/heading-bg2.jpg')._mask2
               +e.H1.title Sign Up
               +note._color._color_green._lh26.__note Almost there. Just few more things to&nbsp;go. Please verify your new account.
         +col({ xl: 7, lg: 12})
