--- a/app/pages/signup-verification-message/signup-verification-message.pug
+++ b/app/pages/signup-verification-message/signup-verification-message.pug
@@ -6,12 +6,12 @@ block head
 block content
   +content-origin._reverse._last._top-bmg
     .container
-      +grid.grid_layout.grid_no-top
+      +grid.grid_layout.grid_content
         +col({ xl: 4, lg: 12})
           +grid.grid_layout.grid_no-top
             +col({xl: 9, lg: 12})
               +sidebar._no-bg
-                +heading('assets/images/heading-bg1.jpg', 'assets/images/heading-bg1.jpg')
+                +heading('assets/images/heading-bg1-v2.jpg')
                   +e.H1.title Sign Up
                   +note._color._color_green._lh26.__note Almost there. Just few more things to go. Please verify your new account.
             +col({xl: 3, lg: 12})
