--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -24,8 +24,8 @@ block content
         +link(href="order-summary.html") Order summary(order-summary.html)
         +link(href="order-checkout.html") Order checkout(order-checkout.html)
         +link(href="signup.html") Sign Up (for tenant) (signup.html)
-        //- +link(href="signup-verification-message.html") Sign Up verification message (signup-verification-message.html)
-        //- +link(href="host-signup-verification-message.html") Sign Up verification message (for host) (host-signup-verification-message.html)
+        +link(href="signup-verification-message.html") Sign Up verification message (signup-verification-message.html)
+        +link(href="host-signup-verification-message.html") Sign Up verification message (for host) (host-signup-verification-message.html)
 
       +page-title._small Попапы
       +e.list
