sign up end message

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -120,6 +120,12 @@
       #{$b}:hover & {
         transform: translate3d(5px, -50%, 0) rotate(-90deg);
       }
+
+      #{$b}_icon_big & {
+        right: 14px;
+        width: 15px;
+        height: 9px;
+      }
     }
   }
 
