--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -119,5 +119,6 @@ include ../components/popup-signin/popup-signin
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
+include ../components/success-message/success-message
 include ../components/ui-kit/ui-kit
 include ../components/user-menu-panel/user-menu-panel
