--- a/app/pages/signup/signup.pug
+++ b/app/pages/signup/signup.pug
@@ -8,7 +8,7 @@ block content
     .container
       +grid.grid_layout.grid_content
         +col({ xl: 3, lg: 12})
-          +sidebar._no-bg
+          +sidebar._no-bg(data-unstick-media="lg")
             +heading('assets/images/heading-bg1-v2.jpg')
               +e.H1.title Sign Up
               +note._color._color_green._lh26.__note Create your own Space Pool account. Get full access to letting options or become a host and create your own offers on Space pool.
