--- a/app/pages/signup-verification-message/signup-verification-message.pug
+++ b/app/pages/signup-verification-message/signup-verification-message.pug
@@ -4,19 +4,24 @@ block head
   - var pageTitle = 'SpacePool - Sign Up Verification Message'
 
 block content
-  +content-origin._reverse._last._top-bmg
+  +content-origin._reverse._last._heading
     .container
       +grid.grid_layout.grid_content
         +col({ xl: 4, lg: 12})
-          +grid.grid_layout.grid_no-top
-            +col({xl: 9, lg: 12})
-              +sidebar._no-bg
+          +sidebar._no-bg(data-unstick-media="lg")
+            +grid.grid_layout.grid_no-top
+              +col({xl: 9, lg: 12})
                 +heading('assets/images/heading-bg1-v2.jpg')
                   +e.H1.title Sign Up
                   +note._color._color_green._lh26.__note Almost there. Just few more things to go. Please verify your new account.
-            +col({xl: 3, lg: 12})
-        +col({ xl: 7, lg: 12})
-        +col({ xl: 1, lg: 12}).hide-lg
+              +col({xl: 3, lg: 12})
+        +col({ xl: 8, lg: 12})
+          +success-message
+            +e.buttons
+              +grid.grid_layout
+                +col({xl: 6, sm: 12})
+                  +button()(href="#").__button Ok, Got it.
+                +col({xl: 6, sm: 12})
 
 block panels
   +main-menu-inner
