--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -109,13 +109,17 @@
 
     &_mg30 {
       margin-bottom: 30px;
+
+      @include screen('sm') {
+        margin-bottom: 56px;
+      }
     }
 
     &_mg46 {
       margin-bottom: 46px;
 
       @include screen('sm') {
-        margin-bottom: 40px;
+        margin-bottom: 56px;
       }
     }
 
