--- a/app/pages/signup-verification-message/signup-verification-message.pug
+++ b/app/pages/signup-verification-message/signup-verification-message.pug
@@ -9,12 +9,9 @@ block content
       +grid.grid_layout.grid_content
         +col({ xl: 4, lg: 12})
           +sidebar._no-bg(data-unstick-media="lg")
-            +grid.grid_layout.grid_no-top
-              +col({xl: 9, lg: 12})
-                +heading('assets/images/heading-bg1-v2.jpg')
-                  +e.H1.title Sign Up
-                  +note._color._color_green._lh26.__note Almost there. Just few more things to go. Please verify your new account.
-              +col({xl: 3, lg: 12})
+            +heading('assets/images/heading-bg2.jpg')._mask2._wide
+              +e.H1.title Sign Up
+              +note._color._color_green._lh26.__note Almost there. Just few more things to&nbsp;go. Please verify your new account.
         +col({ xl: 8, lg: 12})
           +success-message
             +e.buttons
