cookies message add

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -4,7 +4,7 @@ mixin header(host)
     .container
       +e.logo
         +logo()(href="/")
-      +e.NAV.navigation
+      +e.NAV.navigation(data-rounding-target)
         +e.main
           +header-menu
         +e.user
