--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -113,6 +113,10 @@ $color-note-green: #0acda7;
 $color-mask-bg1: rgba(#172640, .41);
 $color-mask-bg2: rgba(#233435, .39);
 $color-error: #d67354;
+$color-button-cookie: #141a23;
+$color-calendar-days: #b6bcc4;
+$color-calendar-active-day: #252b33;
+$color-calendar-disabled-arrow: #b4bac2;
 
 // ##########
 // Transitions
