--- a/app/layouts/default-login.pug
+++ b/app/layouts/default-login.pug
@@ -19,6 +19,7 @@ html(lang='en')
 
     +overlay
     +user-menu-panel
+    +cookies
     block panels
     +footer
     script(src='assets/scripts/libs/object-assign-auto.min.js')
