account settings add image upload

--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -16,4 +16,10 @@
     line-height: 0;
     border-radius: 50%;
   }
+
+  &_big {
+    width: 110px;
+    height: 110px;
+    min-width: 110px;
+  }
 }
