--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -443,6 +443,15 @@
       margin-bottom: 44px;
     }
   }
+
+  &__avatar-uploader {
+    transform: translate3d(0, 39%, 0);
+
+    @include screen('md') {
+      transform: translate3d(0, 39%, 0);
+      margin-bottom: 42px;
+    }
+  }
 }
 
 .error-message {
