--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -873,6 +873,8 @@ block content
       +ui-section-content
         +ui-description .avatar
         +avatar('assets/images/ava.jpg')
+        +ui-description .avatar._big
+        +avatar('assets/images/ava.jpg')._big
 
     //- Short profile
     +ui-section
