--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -117,6 +117,7 @@ $color-button-cookie: #141a23;
 $color-calendar-days: #b6bcc4;
 $color-calendar-active-day: #252b33;
 $color-calendar-disabled-arrow: #b4bac2;
+$color-icon-gray-another: #333;
 
 // ##########
 // Transitions
