--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -15,6 +15,14 @@
       padding-left: 35px;
     }
 
+    &_mid {
+      padding-left: 32px;
+
+      @include screen('lg') {
+        padding-left: 30px;
+      }
+    }
+
     &_small {
       padding-left: 25px;
     }
@@ -33,6 +41,10 @@
 
     &_gray {
       fill: $color-basic-light;
+    }
+
+    &_gray-dark {
+      fill: $color-icon-gray-another;
     }
   }
 
@@ -122,6 +134,11 @@
     &_breafcase {
       width: 24px;
       height: 20px;
+    }
+
+    &_img {
+      width: 17px;
+      height: 15px;
     }
 
     #{$b}_no-shadow & {
