--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -102,6 +102,17 @@
       @include screen('sm') {
         right: 9px;
       }
+
+      sup {
+        font-size: .6em;
+        line-height: 1;
+        margin-left: -3px;
+        font-weight: 700;
+      }
+
+      &_r0 {
+        right: 0;
+      }
     }
   }
 
