--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -437,6 +437,9 @@ block content
             br
             +form-box()
               +input-number()(placeholder="Количество товара")
+            +ui-description Минимум и максимум задаются в атрибутах data-min и data-max
+            +form-box('Count')
+              +input-numbers('numbers', 'Count', 4, 15)
           +col(12)
             +ui-description .textarea
             br
