--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -60,6 +60,11 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-left: -30px;
     margin-right: -30px;
     margin-top: -$grid-gap-vertical-big;
+
+    @include screen('sm') {
+      margin-left: -5px;
+      margin-right: -5px;
+    }
   }
 
   &_blog {
@@ -177,6 +182,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_bigger & {
       padding: $grid-gap-vertical-big 30px 0;
+
+      @include screen('sm') {
+        padding: $grid-gap-vertical-big 5px 0;
+      }
     }
 
     #{$b}_blog & {
