--- a/app/layouts/default-with-mobile-panel.pug
+++ b/app/layouts/default-with-mobile-panel.pug
@@ -25,3 +25,4 @@ html(lang='en')
     script(src='assets/scripts/libs/object-assign-auto.min.js')
     script(src='assets/scripts/app.min.js')
     script(src='assets/scripts/main.js')
+    script(src='assets/scripts/map.js')
