--- a/app/components/popup-add-offer/popup-add-offer.pug
+++ b/app/components/popup-add-offer/popup-add-offer.pug
@@ -34,7 +34,7 @@ mixin popup-add-offer()
                       option(value="per year") Per year
               +col({xl: 12})
                 +form-section-wrapper._noflex
-                  +form-box('Available Quantity')
+                  +form-box('Available Quantity', '', 'div')
                     +input-numbers('quantity', 'Available Quantity', 1)
                   +form-section-text._light Provide overal ammount of this particular offer.
               +col({xl: 6, sm: 12})
@@ -97,7 +97,7 @@ mixin popup-add-offer()
                       option(value="per year") Per year
               +col({xl: 12})
                 +form-section-wrapper._noflex
-                  +form-box('Available Quantity')
+                  +form-box('Available Quantity', '', 'div')
                     +input-numbers('quantity', 'Available Quantity', 1)
                   +form-section-text._light Provide overal ammount of this particular offer.
               +col({xl: 6, sm: 12})
@@ -160,12 +160,12 @@ mixin popup-add-offer()
                       option(value="per year") Per year
               +col({xl: 12})
                 +form-section-wrapper._noflex._negative-mg17
-                  +form-box('Available Quantity')
+                  +form-box('Available Quantity', '', 'div')
                     +input-numbers('quantity', 'Available Quantity', 1)
                   +form-section-text._light Provide overal ammount of this particular offer.
               +col({xl: 12})
                 +form-section-wrapper._noflex._negative-mg13
-                  +form-box('Number of seats')
+                  +form-box('Number of seats', '', 'div')
                     +input-numbers('seats', 'Number of seats', 1)
                   +form-section-text._light Overal ammount of available seats for one particular Meeting Rooms
               +col({xl: 6, sm: 12})
@@ -230,12 +230,12 @@ mixin popup-add-offer()
                       option(value="per year") Per year
               +col({xl: 12})
                 +form-section-wrapper._noflex._negative-mg17
-                  +form-box('Available Quantity')
+                  +form-box('Available Quantity', '', 'div')
                     +input-numbers('quantity', 'Available Quantity', 1)
                   +form-section-text._light Provide overal ammount of this particular offer.
               +col({xl: 6, sm: 12})
                 +form-section-wrapper._noflex._negative-mg13
-                  +form-box('Number of Desks')
+                  +form-box('Number of Desks', '', 'div')
                     +input-numbers('desks', 'Number of Desks', 1)
                   +form-section-text._light Existing desks or office capability
               +col({xl: 6, sm: 12})
