--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -693,7 +693,7 @@
   &__buttons {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -10px;
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
@@ -706,14 +706,10 @@
   &__button {
     position: relative;
     display: block;
-    width: 14px;
-    min-width: 14px;
+    width: 34px;
+    min-width: 34px;
     height: 100%;
     cursor: pointer;
-
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
 
     &::before,
     &::after {
